test/attr/testable_invalid_decl.code
// RUN: %target-language-frontend -typecheck -verify %s

@testable fn foo() {} // expected-error {{@testable may only be used on 'import' declarations}} {{1-11=}}
